# sololog

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
BLog/: Logger.py
